# Dreamio-updater

./: .gitignore  Cargo.toml  DreamioUpdater.res  LICENSE  README.md  build.rs  justfile
.cargo/: config.toml
.github/workflows/: rust-build.yml
src/: DreamioUpdater.rc  main.rs
