[package]
name = "DreamioUpdater"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.4"
sysinfo = "0.28.2"
winapi = { version = "0.3", features = ["wincon", "consoleapi", "processenv", "winbase", "handleapi", "winuser"] }
qbsdiff = "1.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
indicatif = "0.16.2"
eframe = "0.21.0"
env_logger = "0.11.5"
log = "0.4.22"
fern = "0.6"
chrono = "0.4.38"

[profile.release]
strip = true
panic = "abort"
opt-level = "z"
debug = false
lto = true
codegen-units = 1

[[bin]]
name = "DreamioUpdater"
path = "src/main.rs"