[package]
name = "DreamioUpdater"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.4"
sysinfo = "0.28.2"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Com"] }
qbsdiff = "1.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
egui = "0.33.0"
eframe = "0.33.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
crossbeam-channel = "0.5.15"
image = { version = "0.25.1", default-features = false, features = ["ico"] }
raw-window-handle = "0.6.2"
opener = "0.8.3"

[build-dependencies]
embed-resource = "2.2"

[profile.release]
strip = true
panic = "abort"
opt-level = "z"
debug = false
lto = true
codegen-units = 1
